--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My React App</title>
+    <script src="https://kit.fontawesome.com/f6f4f5ee9c.js" crossorigin="anonymous"></script>
+    <title>Where in the world ?</title>
 </head>
 
 <body>
