--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Information about countries of the world">
     <script src="https://kit.fontawesome.com/f6f4f5ee9c.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png"
+        href="https://icons.iconarchive.com/icons/dtafalonso/modern-xp/512/ModernXP-73-Globe-icon.png" />
     <title>Where in the world ?</title>
 </head>
 
 <body>
     <div id="app"></div>
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "WebSite",
+            "name": "Where in the World",
+            "url": "https://nervous-yalow-e52c54.netlify.app/",
+        }
+    </script>
 </body>
 
 </html>
