--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
     <script src="https://kit.fontawesome.com/f6f4f5ee9c.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png"
         href="https://icons.iconarchive.com/icons/dtafalonso/modern-xp/512/ModernXP-73-Globe-icon.png" />
+
+    <meta property="og:title" content="Where in the world ?" />
+    <meta property="og:url" content="https://nervous-yalow-e52c54.netlify.app/" />
+    <meta property="og:description" content="Information about countries of the world">
+    <meta property="og:image"
+        content="https://icons.iconarchive.com/icons/dtafalonso/modern-xp/512/ModernXP-73-Globe-icon.png">
     <title>Where in the world ?</title>
 </head>
 
